--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,18 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Deo's Website</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+ </head>
+  <body>
+    <div class="main-container">
+    	<div class="page-header">{{partial 'header'}}</div>
+		<main>{{outlet}}</main>
+    </div>
+	{{partial 'footer'}}
+  </body>
+</html>
