--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -9,9 +9,9 @@
     <meta name="author" content="">
  </head>
   <body>
-    <div class="main-container">
-    	<div class="page-header">{{partial 'header'}}</div>
-		<main>{{outlet}}</main>
+    <div class="container">
+    	{{partial 'header'}}
+		{{outlet}}
     </div>
 	{{partial 'footer'}}
   </body>
