--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -1,10 +1,10 @@
-<footer>
-<nav>
-	<ul>
-		<li>
-			{{#link-to 'about'}}About{{/link-to}}
-		</li>
-	</ul>
-</nav>
-<label>Copyright© Deovandski 2016</label>
+<footer class="footer">
+	<nav>
+		<ul>
+			<li>
+				{{#link-to 'about'}}About{{/link-to}}
+			</li>
+		</ul>
+	</nav>
+	<label>Copyright© Deovandski 2016</label>
 </footer>
