--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Deo's Website</title>
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Deovandski">
  </head>
   <body>
-    <div class="container">
-    	{{partial 'header'}}
-		{{outlet}}
-    </div>
+    {{partial 'header'}}
+	{{outlet}}
 	{{partial 'footer'}}
   </body>
 </html>
