--- a/app/templates/deo-space-program/history.hbs
+++ b/app/templates/deo-space-program/history.hbs
@@ -1,3 +1,23 @@
-HISTORY
-
-{{outlet}}
+<div id="DSP_BG_history" class="DSP_BG">
+	<div id="DSP_header">
+		<h1>Welcome to Deo's Space Program!</h1>
+		<div id="logo"><img src="http://i.imgur.com/poXwUfq.png" alt="Deo's Space Program Logo" width="50%" /></div>
+		<h2>The story of how one man was able to lift off an entire space program!</h2>
+		<nav>
+			<ul>
+				<li>{{#link-to 'deoSpaceProgram.index'}}Home{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.history'}}History{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.kerbals'}}Kerbals{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.missions'}}Missions{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.achievements' id="active"}}Achievements{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.future'}}Future{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.copyright'}}Copyright{{/link-to}}</li>
+			</ul>
+		</nav>
+	</div>
+	<div id="DSP_main">
+		<section>
+			<p>TODO</p>
+		</section>
+	</div>
+</div>
