--- a/app/templates/deo-space-program/index.hbs
+++ b/app/templates/deo-space-program/index.hbs
@@ -1,43 +1,32 @@
-<div id="DSP_header">
-	<h1>Welcome to Deo's Space Program!</h1>
-	<div id="logo"><img src="img/logo.png" alt="Deo's Space Program Logo" width="50%" /></div>
-	<h2>The story of how one man was able to lift off an entire space program!</h2>
-	<nav>
-		<ul>
-			<li><a id="active" href="#">Home</a></li>
-			<li><a href="history.html">History</a></li>
-			<li><a href="kerbals.html">Kerbals</a></li>
-			<li><a href="missions.html">Missions</a></li>
-			<li><a href="achievements.html">Achievements</a></li>
-			<li><a href="future.html">Future Plans</a></li>
-			<li><a href="copyright.html">View Copyright Notice</a></li>
-		</ul>
-	</nav>
-</div>
-<div id="DSP_main">
-	<section>
-		<article class="intro">
+<div id="DSP_BG_index" class="DSP_BG">
+	<div id="DSP_header">
+		<h1>Welcome to Deo's Space Program!</h1>
+		<div id="logo"><img src="http://i.imgur.com/poXwUfq.png" alt="Deo's Space Program Logo" width="50%" /></div>
+		<h2>The story of how one man was able to lift off an entire space program!</h2>
+		<nav>
+			<ul>
+				<li>{{#link-to 'deoSpaceProgram.index' id="active"}}Home{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.history'}}History{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.kerbals'}}Kerbals{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.missions'}}Missions{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.achievements'}}Achievements{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.future'}}Future{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.copyright'}}Copyright{{/link-to}}</li>
+			</ul>
+		</nav>
+	</div>
+	<div id="DSP_main">
+		<section>
+			<article class="intro">
 			<p>Long time ago when version 0.x dominated the KSP universe, there was a newbie who decided to purchase a copy of this game due to the interesting concept behing it.
-				Forward two years, and you would see a not-so-newbie developer who is amazed by how the community and game grew.
-				The growth followed pretty much the same rate as his gut growth due to the lack of exercise and overeating due to college and work.</p>
+			Forward two years, and you would see a not-so-newbie developer who is amazed by how the community and game grew.
+			The growth followed pretty much the same rate as his gut growth due to the lack of exercise and overeating due to college and work.</p>
 			<p>However, 2016 is not simply the end of this nerdy history, but actually a new start for both the game and the developer playing it!
-				The developer is losing weight and the game is reaching a new phase of being ported to Unity 5 which will allow it to reach console players and not only the "PC Master Race" players.</p>
-			<p>Although progress is being made, every technology can be a victim of a bug such as the one below:</p>
-		</article>
-		<article class="youtubeVid">
-			<iframe src="https://www.youtube.com/embed/VHGa-IOctSg" frameborder="0" allowfullscreen></iframe>
-		</article>
-		<article class="outro">
-			<p>// TODO</p>
-		</article>
-	</section>
+			The developer is losing weight and the game is reaching a new phase of being ported to Unity 5 which will allow it to reach console players and not only the "PC Master Race" players.</p>
+			</article>
+		</section>
+	</div>
 </div>
-<p>Long time ago when version 0.x dominated the KSP universe, there was a newbie who decided to purchase a copy of this game due to the interesting concept behing it.
-				Forward two years, and you would see a not-so-newbie developer who is amazed by how the community and game grew.
-				The growth followed pretty much the same rate as his gut growth due to the lack of exercise and overeating due to college and work.</p><p>Long time ago when version 0.x dominated the KSP universe, there was a newbie who decided to purchase a copy of this game due to the interesting concept behing it.
-				Forward two years, and you would see a not-so-newbie developer who is amazed by how the community and game grew.
-				The growth followed pretty much the same rate as his gut growth due to the lack of exercise and overeating due to college and work.</p><p>Long time ago when version 0.x dominated the KSP universe, there was a newbie who decided to purchase a copy of this game due to the interesting concept behing it.
-				Forward two years, and you would see a not-so-newbie developer who is amazed by how the community and game grew.
-				The growth followed pretty much the same rate as his gut growth due to the lack of exercise and overeating due to college and work.</p><p>Long time ago when version 0.x dominated the KSP universe, there was a newbie who decided to purchase a copy of this game due to the interesting concept behing it.
-				Forward two years, and you would see a not-so-newbie developer who is amazed by how the community and game grew.
-				The growth followed pretty much the same rate as his gut growth due to the lack of exercise and overeating due to college and work.</p>
+
+
+
