dpw styles setup

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,4 +16,5 @@ $navbar-default-bg: hsla(186, 100%, 50%, 0.7);
 @import "globals";
 
 // Project Variables and setup.
-@import "dsp";
+@import "dpw"; // Deo's Personal Website
+@import "dsp"; // Deo's Space Program
