--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,8 @@
-<p>Welcome to my personal website! </p>
-
-<p>Under Construction! </p>
-
-
+<div id="DPW_BG_index" class="DPW_BG">
+	<div id="DPW_main">
+		<section>
+			<p>Welcome to my Personal Website!</p>
+			<p>Deo's Space Program is running! The other two is still being created...</p>
+		</section>
+	</div>
+</div>
