fixed header color issues

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,8 +8,7 @@
 	}
 */
 
-// Bootstrap Variables Setup
-$navbar-default-bg: hsla(186, 100%, 50%, 0.7);
+// Bootstrap
 @import "bootstrap";
 
 // Other Global Variables and setup.
