--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -1,10 +1,10 @@
 <header>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default" id="navbar">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 				</button>
-				{{#link-to 'index' class="navbar-brand"}}Deo's Website{{/link-to}}
+				{{#link-to 'index' class="navbar-brand" id="navbar_brand"}}Deo's Website{{/link-to}}
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
