archives pages setup finished

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,2 +1,8 @@
-ABOUT PAGE
-{{outlet}}
+<div id="DPW_BG_index" class="DPW_BG">
+	<div id="DPW_main">
+		<section>
+			<p>About Page</p>
+			<p>Later I will finish this page...</p>
+		</section>
+	</div>
+</div>
