--- a/app/templates/archives/fav-vocaloid-songs.hbs
+++ b/app/templates/archives/fav-vocaloid-songs.hbs
@@ -1,3 +1,60 @@
-{{outlet}}
+<div id="DAS_BG" class="DAS_BG">
+	<div id="DAS_main">
+		<section>
+			<div id="archives_favVocaloidslogo">
+				<img height="300" alt="All Vocaloids" src="http://i.imgur.com/8jT4AtV.jpg">
+			<p>Vocaloid Group Photo by <a href="http://imacobra.deviantart.com/art/MMD-All-VOCALOIDs-Group-Pic-489976514">iMACobra</a></p>
+			</div>
+			<div id="archives_favVocaloids_main">
+			<h3>1st. Hatsune Miku - Two Breaths Walking</h3>
+			<iframe src="https://www.youtube.com/embed/E7LBCKrDK1Q" allowfullscreen></iframe>
 
-TEST
+			<h3>2nd. Hatsune Miku - Dear</h3>
+			<iframe src="https://www.youtube.com/embed/S-94USeRTZk" allowfullscreen></iframe>
+
+			<h3>3rd. Hatsune Miku - Time Machine</h3>
+			<iframe src="https://www.youtube.com/embed/SVXz06ON8R8" allowfullscreen></iframe>
+			<h3>4th. Hatsune Miku - Levan Polka</h3>
+			<iframe src="https://www.youtube.com/embed/ymET3mf99Ag" allowfullscreen></iframe>
+			<h3>5th. Hatsune Miku - Love is War</h3>
+			<iframe src="https://www.youtube.com/embed/jDop41Bxq2A" allowfullscreen></iframe>
+
+			<h3>6h. Kagamine Rin - Tokyo Teddy Bear</h3>
+			<iframe src="https://www.youtube.com/embed/vYaeIaI9y7c" allowfullscreen></iframe>
+
+			<h3>7th. Hatsune Miku - Glow</h3>
+			<iframe src="https://www.youtube.com/embed/75fy0ghFhUU" allowfullscreen></iframe>
+
+			<h3>8th. Hatsune Miku - Romeo and Cinderella</h3>
+			<iframe src="https://www.youtube.com/embed/swqbfMh467A" allowfullscreen></iframe>
+
+			<h3>9th. Hatsune Miku - Senbonsakura "One Thousand Cherry Trees"</h3>
+			<iframe src="https://www.youtube.com/embed/Mqps4anhz0Q" allowfullscreen></iframe>
+			<h3>10th. Hatsune Miku - Rolling Girl</h3>
+			<iframe src="https://www.youtube.com/embed/XyTmXLWCazw" allowfullscreen></iframe>
+
+			<h3>11th. Kagamine Rin - Tengaku "Music of heavens"</h3>
+			<iframe src="https://www.youtube.com/embed/csQgwDNiW6M" allowfullscreen></iframe>
+
+			<h3>12th. Hatsune Miku - 1/6 Out of the gravity</h3>
+			<iframe src="https://www.youtube.com/embed/JJYyeFoiYH4" allowfullscreen></iframe>
+
+			<h3>13th. Hatsune Miku - Two-faced Lovers</h3>
+			<iframe src="https://www.youtube.com/embed/oE3ftO6pGug" allowfullscreen></iframe>
+
+			<h3>14th. Hatsune Miku - Glass Wall</h3>
+			<iframe src="https://www.youtube.com/embed/UVWqp3DoK7g" allowfullscreen></iframe>
+			<h3>15th. Hatsune Miku - Meteor</h3>
+			<iframe src="https://www.youtube.com/embed/6kDmnhe80SY" allowfullscreen></iframe>
+			</div>
+			<p>This list contains at least more 60 songs from all Vocaloids including:</p>
+			<ul>
+			<li>Moon</li>
+			<li>DYE</li>
+			<li>from Y to Y</li>
+			<li>Just be friends</li>
+			<li>And many others...</li>
+			</ul>
+		</section>
+	</div>
+</div>
