--- a/app/templates/archives/index.hbs
+++ b/app/templates/archives/index.hbs
@@ -1,3 +1,16 @@
-Archives Index
-
-{{outlet}}
+<div id="DAS_BG" class="DAS_BG">
+	<div id="DAS_header">
+		<h1>Deo's Archives</h1>
+		<h2>For the sake of keeping my own work history readily available!</h2>
+	</div>
+	<div id="DAS_main">
+		<section>
+			<p>This archive will host a rather diverse collection of websites, so it will be divided in categories for easier searching. Happy stalking!</p>
+		</section>
+		<section>
+			<ul>
+				<li>{{#link-to 'archives.favVocaloidSongs'}}Favorite Vocaloid Songs{{/link-to}}</li>
+			</ul>
+		</section>
+	</div>
+</div>
