--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -10,12 +10,13 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
+					<li>{{#link-to 'archives'}}Archives Page{{/link-to}}</li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ember CLI Tutorial <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li>{{#link-to 'emberTutorial'}}Tutorial Page{{/link-to}}</li>
 							<li role="separator" class="divider"></li>
-							<li>{{#link-to 'emberTutorial.installation'}}Installing Requirements{{/link-to}}</li>
+							<li>{{#link-to 'emberTutorial.installation'}}Install Requirements{{/link-to}}</li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -23,7 +24,7 @@
 						<ul class="dropdown-menu">
 							<li>{{#link-to 'sassTutorial'}}Tutorial Page{{/link-to}}</li>
 							<li role="separator" class="divider"></li>
-							<li>{{#link-to 'sassTutorial.installation'}}Installing Requirements{{/link-to}}</li>
+							<li>{{#link-to 'sassTutorial.installation'}}Install Requirements{{/link-to}}</li>
 						</ul>
 					</li>
 					<li class="dropdown">
