SASS Tutorial added

--- a/app/templates/archives/fav-vocaloid-songs.hbs
+++ b/app/templates/archives/fav-vocaloid-songs.hbs
@@ -2,8 +2,7 @@
 	<div id="DAS_main">
 		<section>
 			<div id="archives_favVocaloidslogo">
-				<img height="300" alt="All Vocaloids" src="http://i.imgur.com/8jT4AtV.jpg">
-			<p>Vocaloid Group Photo by <a href="http://imacobra.deviantart.com/art/MMD-All-VOCALOIDs-Group-Pic-489976514">iMACobra</a></p>
+				<img height="300" alt="Miku cute photo" src="http://i.imgur.com/v2p2NDQ.jpg">
 			</div>
 			<div id="archives_favVocaloids_main">
 			<h3>1st. Hatsune Miku - Two Breaths Walking</h3>
