Finished the styling setup for all projects

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,6 +17,6 @@
 // Project Variables and setup.
 @import "dpw"; // Deo's Personal Website
 @import "dsp"; // Deo's Space Program
-@import "elt"; // Ember CLI Tutorial
+@import "ect"; // Ember CLI Tutorial
 @import "sts"; // SASS Tutorial Styles
 @import "das"; // Deo's Archives Styles
