--- a/app/styles/ect.scss
+++ b/app/styles/ect.scss
@@ -3,34 +3,32 @@
 /*
 	Structure: 
 
-	.ELT_BG {
-		#ELT_header {Shared Style Only}
-		#ELT_Main {Page Specific Definitions}
+	.ECT_BG {
+		#ECT_header {Shared Style Only}
+		#ECT_Main {Page Specific Definitions}
 	}
 */
 
-// #ELT_header Definitions
+// #ECT_header Definitions
 
-#ELT_header {
+#ECT_header {
 	text-align: center;
 	h1:nth-of-type(1) {
-		color: hsla(192, 100%, 31%, 1);
-		text-shadow: 2px 2px  hsla(189, 93%, 84%, 0.6);
-		text-shadow: 5px 5px  hsla(189, 93%, 5%, 0.7);
+		color: hsla(31, 100%, 62%, 1);
+		text-shadow: 2px 2px  hsla(272, 54%, 14%, 0.6);
 		background: hsla(189, 100%, 0%, 0.6);
-		text-transform: uppercase;
 	}
 	h2:nth-of-type(1) {
-		color: hsla(189, 93%, 84%, 1);
+		color: hsla(31, 100%, 62%, 1);
 		text-shadow: 2px 2px  hsla(189, 40%, 50%, 1);
 		background: hsla(189, 100%, 0%, 0.6);
 		letter-spacing: 1px;
 	}
 }
 
-// #ELT_main Definitions
+// #ECT_main Definitions
 
-#ELT_main {
+#ECT_main {
     padding: 25px;
     background-clip: content-box;
 	bottom:50px;
@@ -63,13 +61,13 @@
 // Background Definitions
 
 
-.ELT_BG {
+.ECT_BG {
     background-repeat: no-repeat;
     background-size: cover;
 	margin: 0px;
 }
 
-#ELT_BG_index {
+#ECT_BG_index {
 	// No Background Image
 }
 
