--- a/app/templates/ember-tutorial/installation.hbs
+++ b/app/templates/ember-tutorial/installation.hbs
@@ -1,1 +1,14 @@
-{{outlet}}
+<div id="ECT_BG_index" class="ECT_BG">
+	<div id="ECT_header">
+		<h1>Ember Cli Tutorial - Installation</h1>
+	</div>
+	<div id="ECT_main">
+		<section>
+			<article>
+			</article>
+		</section>
+	</div>
+</div>
+
+
+
