--- a/app/templates/ember-tutorial/index.hbs
+++ b/app/templates/ember-tutorial/index.hbs
@@ -1,3 +1,18 @@
-Ember Tutorial Index
+<div id="ECT_BG_index" class="ECT_BG">
+	<div id="ECT_header">
+		<h1>The Short and Sweet Ember Cli Tutorial!</h1>
+	</div>
+	<div id="ECT_main">
+		<section>
+			<article>
+				TODO
+			</article>
+			<article>
+				{{#link-to 'emberTutorial.installation' class="button1" }}Installing the Requirements{{/link-to}}
+			</article>
+		</section>
+	</div>
+</div>
 
-{{outlet}}
+
+
