added links on the footer

--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -4,6 +4,12 @@
 			<li>
 				{{#link-to 'about'}}About{{/link-to}}
 			</li>
+			<li>
+				<a href="http://deovandski.blogspot.com/">My Blog</a>
+			</li>
+			<li>
+				<a href="https://github.com/Deovandski?tab=repositories">Github Page</a>
+			</li>
 		</ul>
 	</nav>
 	<label>Copyright© Deovandski 2016</label>
