--- a/app/templates/deo-space-program/copyright.hbs
+++ b/app/templates/deo-space-program/copyright.hbs
@@ -5,13 +5,13 @@
 		<h2>The story of how one man was able to lift off an entire space program!</h2>
 		<nav>
 			<ul>
-				<li>{{#link-to 'deoSpaceProgram.index' id="active"}}Home{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.index'}}Home{{/link-to}}</li>
 				<li>{{#link-to 'deoSpaceProgram.history'}}History{{/link-to}}</li>
 				<li>{{#link-to 'deoSpaceProgram.kerbals'}}Kerbals{{/link-to}}</li>
 				<li>{{#link-to 'deoSpaceProgram.missions'}}Missions{{/link-to}}</li>
 				<li>{{#link-to 'deoSpaceProgram.achievements'}}Achievements{{/link-to}}</li>
 				<li>{{#link-to 'deoSpaceProgram.future'}}Future{{/link-to}}</li>
-				<li>{{#link-to 'deoSpaceProgram.copyright'}}Copyright{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.copyright' id="active"}}Copyright{{/link-to}}</li>
 			</ul>
 		</nav>
 	</div>
@@ -20,7 +20,7 @@
 		<p>All info about copyright info will be add on the next iteration... If you are the owner of one of the Miku pictures that I made use of, please contact on FB or Twitter so that I can write down your contact. This website is non-commercial and non-profit!</p>
 		<table>
 		<caption>Flag Image Sources</caption>
-		<tr>
+		<tr id="table_header">
 		<th scope="col">Image</th>
 		<th scope="col">Source</th>
 		</tr>
