--- a/app/templates/deo-space-program/history.hbs
+++ b/app/templates/deo-space-program/history.hbs
@@ -6,10 +6,10 @@
 		<nav>
 			<ul>
 				<li>{{#link-to 'deoSpaceProgram.index'}}Home{{/link-to}}</li>
-				<li>{{#link-to 'deoSpaceProgram.history'}}History{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.history' id="active"}}History{{/link-to}}</li>
 				<li>{{#link-to 'deoSpaceProgram.kerbals'}}Kerbals{{/link-to}}</li>
 				<li>{{#link-to 'deoSpaceProgram.missions'}}Missions{{/link-to}}</li>
-				<li>{{#link-to 'deoSpaceProgram.achievements' id="active"}}Achievements{{/link-to}}</li>
+				<li>{{#link-to 'deoSpaceProgram.achievements'}}Achievements{{/link-to}}</li>
 				<li>{{#link-to 'deoSpaceProgram.future'}}Future{{/link-to}}</li>
 				<li>{{#link-to 'deoSpaceProgram.copyright'}}Copyright{{/link-to}}</li>
 			</ul>
