--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,8 @@
 	<div id="DPW_main">
 		<section>
 			<p>Welcome to my Personal Website!</p>
-			<p>Deo's Space Program is running! The other two is still being created...</p>
+			<p>Although most projects are up and running, they lack content which will be added later on. </p>
+			<p>For my fellow <strong>COMM 261</strong> colleagues, this website does not include any of the PHP requirements and that was on purpose since I will submit another website in order to fulfill that specific requirement. Also, the initial website load may have been rather slow, but that was due to the Dyno in which this website runs and not because of my code. For more information, please visit the <a href="https://github.com/Deovandski/DeoPersonalWebsite">Deo's website</a> repo on Github.</p>
 		</section>
 	</div>
 </div>
