--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,9 +1,9 @@
 <div id="DPW_BG_index" class="DPW_BG">
 	<div id="DPW_main">
 		<section>
-			<p>Welcome to my Personal Website!</p>
-			<p>Although most projects are up and running, they lack content which will be added later on. </p>
-			<p>For my fellow <strong>COMM 261</strong> colleagues, this website does not include any of the PHP requirements, but that was on purpose since I will submit another website in order to fulfill that specific requirement. Also, the initial website load may have been rather slow, but that was due to the Dyno in which this website runs and not because of my code. For more information, please visit the <a href="https://github.com/Deovandski/DeoPersonalWebsite">Deo's website</a> repo on Github.</p> The project that you be reviewing is Deo's Space Program which can acessed through the navbar or through this {{#link-to 'deoSpaceProgram'}}DSP HomePage{{/link-to}}.
+			<h2>Welcome to my Personal Website!</h2>
+			<p>This website hosts several projects and an archive of my past work.</p>
+			<p>A note for my <strong>COMM 261</strong> colleagues:<br><br>This website does not include any of the PHP requirements, but that was on purpose since I will submit another website in order to fulfill that specific requirement. Also, the initial website load may have been rather slow, but that was due to the Dyno in which this website runs and not because of my code. For more information, please visit the <a href="https://github.com/Deovandski/DeoPersonalWebsite">Deo's website</a> repo on Github.</p>
 		</section>
 	</div>
 </div>
