fixed assets location

--- a/app/templates/sass-tutorial/index.hbs
+++ b/app/templates/sass-tutorial/index.hbs
@@ -6,7 +6,7 @@
 		<section>
 			<div class="STS_logos">
 				<img id="imgCSSLeft" height="150" alt="CSS3 Logo" src="http://i.imgur.com/6HxhcT7.png">
-				<img id="imgCSSRight" height="150" alt="SASS Logo" src="http://i.imgur.com/ciAidw9.png">
+				<img id="imgCSSRight" height="150" alt="SASS Logo" src="http://i.imgur.com/9HH2USb.png">
 			</div>
 			<h2>What is it?</h2>
 			<p>Simply put, SASS is CSS3 on steroids because its major goal is to bring a new depth of functionalities and syntax to CSS in order to help designers and programmers alike to easier develop bigger and powerfull websites. Not familiar with CSS3? If so, visit the <a href="http://htmldog.com/guides/css/beginner/">HTML Dog CSS Beginner Tutorial website</a> before reading further.</p>
