guide refactor complete. now customizing SAS guide to comply with the new code

--- a/app/styles/sts_shared/_lists.scss
+++ b/app/styles/sts_shared/_lists.scss
@@ -3,6 +3,8 @@
   padding: 0;
   margin-bottom: $base-line-height / 2;
   padding-left: $base-line-height;
+  display: block;
+  list-style-type: none;
 }
 
 .STS_BG > dl {
