--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -25,6 +25,10 @@
 							<li>{{#link-to 'sassTutorial'}}Tutorial Page{{/link-to}}</li>
 							<li role="separator" class="divider"></li>
 							<li>{{#link-to 'sassTutorial.installation'}}Install Requirements{{/link-to}}</li>
+							<li>{{#link-to 'sassTutorial.importsAndVariables'}} Imports/Variables{{/link-to}}</li>
+							<li>{{#link-to 'sassTutorial.nesting'}}Nesting{{/link-to}}</li>
+							<li>{{#link-to 'sassTutorial.inheritance'}}Inheritance{{/link-to}}</li>
+							<li>{{#link-to 'sassTutorial.more'}}More{{/link-to}}</li>
 						</ul>
 					</li>
 					<li class="dropdown">
