--- a/app/templates/sass-tutorial/installation.hbs
+++ b/app/templates/sass-tutorial/installation.hbs
@@ -12,7 +12,7 @@
 			<p>In order to make the installation tutorial easier to follow since it is almost a tutorial within a tutorial, I created a Google Slides that can be viewed below or at anytime through this <a class="button2" target="_blank" href="https://docs.google.com/presentation/d/1Z4V_zIuWuJkvAGUxMo5ahwBBeLTw3K7qCylAZVe_YMY/edit?usp=sharing">website</a>.</p>
 			<iframe src="https://docs.google.com/presentation/d/1Z4V_zIuWuJkvAGUxMo5ahwBBeLTw3K7qCylAZVe_YMY/embed" width="700" height="400"></iframe>
 			<p>Did the example website worked as expected? If so, then it is time to start diving deep into scss and learn about imports and variables:</p>
-			<a class="button1" href="importsAndVariables.html">Imports and Variables!</a>
+			{{#link-to 'sassTutorial.importsAndVariables' class="button1"}}Imports and Variables!{{/link-to}}
 			</article>
 		</section>
 	</div>
