--- a/app/styles/sts.scss
+++ b/app/styles/sts.scss
@@ -21,6 +21,36 @@
 		text-shadow: 2px 2px  hsla(272, 54%, 14%, 0.6);
 		background: hsla(189, 100%, 0%, 0.6);
 	}
+	nav {
+		text-align: center;
+		ul {
+			margin: 0;
+			padding: 0;
+			li {
+				line-height: 50px;
+				text-align: center;
+				display: inline-block;
+				margin-left: 6px;
+				margin-right: 6px;
+				a, label {
+					padding: 5px;
+					width:100%;
+					line-height: 50px;
+					text-align: center;
+					border: 2px solid $header-background-color;
+					color: darken($header-font-color, 75%);
+					letter-spacing: 1px;
+					text-decoration: none;
+					text-transform: uppercase;
+					margin: 5px;
+					&:hover {
+						border-bottom: 2px solid $header-font-color;
+						color: darken($header-font-color, 25%);
+					}
+				}
+			}
+		}
+	}
 }
 
 // #STS_main Definitions
